 2011-12-30 14:38  asfernandes 
   M doc/sql.extensions/README.builtin_functions.txt
   M src/common/os/guid.h
Make UUID_TO_CHAR2 returns lower-cased strings, as the RFC specifies?\194?\183

 2011-12-30 14:19  alexpeshkoff 
   M src/jrd/svc.cpp
Small correction for CORE-3658

 2011-12-30 14:11  alexpeshkoff 
   M src/burp/burp.cpp
   M src/utilities/fbtracemgr/traceMgrMain.cpp
   M src/utilities/gsec/gsec.cpp
   M src/yvalve/utl.cpp
   M src/yvalve/utl_proto.h
   M src/yvalve/why.cpp
Fixed CORE-3658: FBSVCMGR connects to server as OS user name rather than value of ISC_USER environment variable

 2011-12-29 17:48  alexpeshkoff 
   M src/common/isc_s_proto.h
   M src/common/isc_sync.cpp
   A src/common/os/SyncSignals.h
   A src/common/os/posix/SyncSignals.cpp
   M src/common/thd.cpp
   M src/common/thd.h
   M src/jrd/ibsetjmp.h
   M src/yvalve/MasterImplementation.cpp
Front-ported fix for CORE-3646: Segmentation fault in Linux

 2011-12-29 00:21  asfernandes 
   M builds/posix/Makefile.in
   M builds/posix/make.defaults
Make the thing build with Ubuntu 11.10, binutils 2.21.53.20110810.
Was failing to build 'firebird' caused by common.a (BigInteger.o) usage of libtommath functions.

 2011-12-28 18:16  dimitr 
   M src/remote/client/interface.cpp
   M src/remote/inet.cpp
Misc.

 2011-12-28 15:15  hvlad 
   M builds/win32/make_boot.bat
   A extern/libtommath/libtommath_MSVC10.sln (from /firebird/trunk/extern/libtommath/libtommath_VS2010.sln:53770)
   A extern/libtommath/libtommath_MSVC10.vcxproj (from /firebird/trunk/extern/libtommath/libtommath_VS2010.vcxproj:53771)
   A extern/libtommath/libtommath_MSVC8.sln (from /firebird/trunk/extern/libtommath/libtommath_VS2005.sln:53783)
   A extern/libtommath/libtommath_MSVC8.vcproj (from /firebird/trunk/extern/libtommath/libtommath_VS2005.vcproj:53783)
   A extern/libtommath/libtommath_MSVC9.sln (from /firebird/trunk/extern/libtommath/libtommath_VS2008.sln:53770)